<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et01"
        android:layout_marginTop="20dp"
        android:text="@string/usuario" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et01"
        android:layout_alignParentTop="true"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/et02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/et01"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/ingrese_nuevo_usuario_aqui_" />

    <EditText
        android:id="@+id/et01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/ingresa_nuevo_nombre_aqui_" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et02"
        android:layout_below="@+id/et02"
        android:layout_marginTop="20dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/et02"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/ingrese_nuevo_email_aqui_"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et03"
        android:layout_below="@+id/et03"
        android:layout_marginTop="20dp"
        android:text="@string/nueva_password" />

    <EditText
        android:id="@+id/et04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/et03"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/ingrese_nueva_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch01"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/switch01"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/switch01"
        android:layout_alignLeft="@+id/switch01"
        android:text="@string/deslizar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView4"
        android:onClick="onSave"
        android:text="@string/guardar" />

    <Switch
        android:id="@+id/switch01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/et05"
        android:onClick="volver"
        android:text="@string/ir_a_app" />

</RelativeLayout>